force-app/main/default/objects/OrderExport2__c/OrderExport2__c.object-meta.xml
<CustomObject>
    <label>Order Export</label>
    <nameField>
        <displayFormat>OE2-{000000000}</displayFormat>
        <label>Order Export Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Exports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>