force-app/main/default/objects/OrderExport2__c/fields/AddressValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressValidationStatus__c</fullName>
    <label>Address Validation Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>