force-app/main/default/objects/OrderExport2__c/fields/Contact_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ref_No__c</fullName>
    <label>Contact Ref No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>