force-app/main/default/objects/OrderExport2__c/fields/File_Export_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Export_Date__c</fullName>
    <label>File Export Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>