force-app/main/default/objects/OrderExport2__c/fields/FileExportTime__c.field-meta.xml
<CustomField>
    <fullName>FileExportTime__c</fullName>
    <label>File Export Time</label>
    <type>Time</type>
</CustomField>