force-app/main/default/objects/OrderExport2__c/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <label>Full Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>