force-app/main/default/objects/OrderExport2__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <label>Home Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>