force-app/main/default/objects/OrderExport2__c/fields/Key_Brand__c.field-meta.xml
<CustomField>
    <fullName>Key_Brand__c</fullName>
    <label>Key Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>