force-app/main/default/objects/OrderExport2__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>TEXT(Order__r.Account.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>