force-app/main/default/objects/OrderExport2__c/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <label>Order Notes</label>
    <type>TextArea</type>
</CustomField>