force-app/main/default/objects/OrderExport2__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>