force-app/main/default/objects/OrderExport2__c/fields/Order_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Number__c</fullName>
    <label>Order Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>