force-app/main/default/objects/OrderExport2__c/fields/Ordered_For__c.field-meta.xml
<CustomField>
    <fullName>Ordered_For__c</fullName>
    <label>Ordered For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>