force-app/main/default/objects/OrderExport2__c/fields/OrderEndDate__c.field-meta.xml
<CustomField>
    <fullName>OrderEndDate__c</fullName>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>