force-app/main/default/objects/OrderExport2__c/fields/OrderProductId__c.field-meta.xml
<CustomField>
    <fullName>OrderProductId__c</fullName>
    <label>Order Product Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>