force-app/main/default/objects/OrderExport2__c/fields/OrderProductStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderProductStatus__c</fullName>
    <label>Order Product Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>