force-app/main/default/objects/OrderExport2__c/fields/Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone__c</fullName>
    <label>Other Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>