force-app/main/default/objects/OrderExport2__c/fields/PreferredDeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredDeliveryTime__c</fullName>
    <label>Preferred Delivery Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>