force-app/main/default/objects/OrderExport2__c/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <label>Related Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>