force-app/main/default/objects/OrderExport2__c/fields/RelatedContactChild__c.field-meta.xml
<CustomField>
    <fullName>RelatedContactChild__c</fullName>
    <label>Related Contact/Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>