force-app/main/default/objects/OrderExport2__c/fields/Road__c.field-meta.xml
<CustomField>
    <fullName>Road__c</fullName>
    <label>Road</label>
    <length>255</length>
    <type>Text</type>
</CustomField>