force-app/main/default/objects/OrderExport2__c/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <label>Salesforce Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>