force-app/main/default/objects/OrderExport2__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Unit Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>