force-app/main/default/objects/OrderExport2__c/fields/UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitNumber__c</fullName>
    <label>Unit Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>