force-app/main/default/objects/OrderExport2__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>